--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
     <main>
         <header>
 
-            <h1>título do site </h1>
+            <h1>cursos </h1>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Html5 com css3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                Debitis illum recusandae quae minus enim suscipit ad
+                explicabo soluta perspiciatis doloribus commodi in,
+                perferendis maiores architecto ratione corporis aut 
+                nostrum consectetur!</p>
          </article>  
          <article>
-            <h2>Artigo 002</h2>
-            <p>Texto 002</p>   
+            <h2>Java script</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Velit, optio. Perferendis, ipsa aliquid. Obcaecati 
+                atque vitae magnam sit illum blanditiis est accusamus
+                id quae! Modi quibusdam dolores dolorem veniam explicabo!</p>   
           </article>    
         </header>
     </main>
